--- a/c7-systemd-httpd-php56/Dockerfile
+++ b/c7-systemd-httpd-php56/Dockerfile
@@ -6,7 +6,7 @@ RUN cd ~ && \
         rpm -ivh https://mirror.webtatic.com/yum/el7/webtatic-release.rpm
 
 RUN yum -y install php56w php56w-opcache && \
-        yum -y install php56w-fpm php56w-opcache php56w-mbstring php56w-mysql php56w-cli php56w-xml php56w-mcrypt && \
+        yum -y install php56w-fpm php56w-opcache php56w-mbstring php56w-mysql php56w-cli php56w-xml && \
         systemctl enable php-fpm
 
 # Install httpd
@@ -51,9 +51,17 @@ RUN cd ~ && \
 
 # Install restart httpd
 RUN systemctl enable httpd.service
-
-
 EXPOSE 80
+
+# Setup projects
+RUN useradd jenkins && \
+    groupadd www && \
+    usermod -a -G www jenkins && \
+    usermod -a -G www nginx && \
+    mkdir -p /app/www && \
+    mkdir -p /app/log/nginx && \
+    mkdir -p /app/log/httpd && \
+    chown jenkins:www -R /app/www/
 
 VOLUME [ "/var/log/httpd", "/var/log/php-fpm" ]
 CMD ["/usr/sbin/init"]
