--- a/c7-systemd-nginx-php56/Dockerfile
+++ b/c7-systemd-nginx-php56/Dockerfile
@@ -34,6 +34,6 @@ RUN useradd jenkins && \
     mkdir -p /app/log/httpd && \
     chown jenkins:www -R /app/www/
 
-VOLUME [ "/var/log/nginx", "/var/log/php-fpm" ]
+VOLUME [ "/var/log/nginx", "/var/log/php-fpm", "/app/log", "app/www"]
 
 CMD ["/usr/sbin/init"]
