--- a/c7-systemd-httpd-php56/Dockerfile
+++ b/c7-systemd-httpd-php56/Dockerfile
@@ -11,6 +11,10 @@ rm -f /lib/systemd/system/sockets.target.wants/*initctl*; \
 rm -f /lib/systemd/system/basic.target.wants/*;\
 rm -f /lib/systemd/system/anaconda.target.wants/*;
 
+# install common packages
+RUN yum -y install vim && \
+    yum -y groupinstall "Development Tools" && \
+    yum -y install network-tools
 
 # Install php56
 RUN cd ~ && \
